--- a/nodedemo/public/index.html
+++ b/nodedemo/public/index.html
@@ -10,7 +10,7 @@
     <div id="room"></div>
     <div id="room-list"></div>
     <div id="messages"></div>
-    <form id="send-room">
+    <form id="send-form">
         <input id="send-message">
         <input id="send-button" type="submit" value="Send">
 
@@ -23,8 +23,8 @@
     </form>
 </div>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript" src="/javascripts/chat.js"></script>
-<script type="text/javascript" src="/javascripts/chat_ui.js"></script>
+<script type="text/javascript" src="javascripts/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="javascripts/chat.js"></script>
+<script type="text/javascript" src="javascripts/chat_ui.js"></script>
 </body>
 </html>
